fixed some layout issues

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -18,18 +18,21 @@ code {
   flex-direction: column;
   margin: 2rem;
   padding: 2rem;
-  justify-content: center;
+  align-items: center;
 }
 
 .thoughts-container {
-  display: flex;
   width: 350px;
+  display: flex;
   background-color: white;
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
   border: 2px solid black;
   box-shadow: 10px 10px black;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: center;
 }
 
 .thought-list {
@@ -50,7 +53,6 @@ code {
 .likes-section {
   display: flex;
   border-radius: 50%;
-  flex-direction: row;
   gap: 4px;
   height: 2rem;
 }
@@ -60,4 +62,15 @@ code {
   flex-direction: row;
   float: right;
   margin: -18px;
+}
+
+@media (min-width: 767px) {
+  .thought-list {
+    width: 750px;
+}
+
+.thoughts-container {
+  width: 767px;
+  font-size: 34px;
+}
 }
